--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -4,6 +4,11 @@
  * Licensed under MIT (https://github.com/mmistakes/minimal-mistakes/blob/master/LICENSE)
 */
 
+a {
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
 /* Variables */
 @import "minimal-mistakes/variables";
 
