--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -20,6 +20,13 @@
 
 .archive__item {
   position: relative;
+
+  a:before{
+    opacity: 0.5;
+  }
+  a:hover{
+    opacity: 1;
+  }
 }
 
 .archive__subtitle {
