--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,6 +13,7 @@
 
 <!-- For all browsers -->
 <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
+<link href="https://fonts.googleapis.com/css?family=Inconsolata|Raleway" rel="stylesheet">
 
 <!--[if IE ]>
   <style>
