--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -158,6 +158,11 @@ pre {
 
 pre {
   overflow-x: auto; /* add scrollbars to wide code blocks*/
+  background: $custom-code-bk;
+  border: 1px solid #dddbcc;
+  border-radius: 3px;
+  font-size: 16px;
+  margin-bottom: 30px!important;
 }
 
 p > code,
@@ -168,7 +173,7 @@ td > code {
   padding-top: 0.1rem;
   padding-bottom: 0.1rem;
   font-size: 0.8em;
-  background: $code-background-color;
+  background: $base08;
   border-radius: $border-radius;
 
   &:before,
