--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -13,10 +13,9 @@ $paragraph-indent: false !default; // true, false (default)
 $indent-var: 1.3em !default;
 
 /* system typefaces */
-$serif: Georgia, Times, serif !default;
-$sans-serif: 'Inconsolata', monospace !default;
-$sans-serif: -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI",
-  "Helvetica Neue", "Lucida Grande", Arial, sans-serif !default;
+// $serif: Georgia, Times, serif !default;
+$serif: 'Raleway', -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Helvetica Neue", Arial, sans-serif !default;
+$sans-serif: 'Raleway', -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Helvetica Neue", Arial, sans-serif !default;
 $monospace: Monaco, Consolas, 'Inconsolata', monospace !default;
 
 /* sans serif typefaces */
@@ -158,3 +157,23 @@ $navicon-width: 1.5rem !default;
 $navicon-height: 0.25rem !default;
 $global-transition: all 0.2s ease-in-out !default;
 $intro-transition: intro 0.3s both !default;
+
+
+/*
+    Custom
+    ========================================================================== */
+$custom-code-bk: #282c34;
+$custom-code-border: 1px solid #dddbcc;
+$custom-code-border-rad: 3px;
+$custom-code-font-size: 16px;
+$custom-code-margin-bot: 30px!important;
+
+// background: #f1f0ea;
+// border: 1px solid #dddbcc;
+// border-radius: 3px;
+// font-size: 16px;
+// margin-bottom: 30px!important;
+
+// .token.punctuation {
+//     color: #999;
+// }
