archive item padding fix

--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -22,6 +22,8 @@
 
 .archive__item {
   position: relative;
+  padding: 20px 12px;
+  border-bottom: 1px dotted #303030;
 
   a:before{
     opacity: 0.5;
