--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -84,11 +84,13 @@ a {
 .box:hover::after {
     opacity: 1;
 }
-
 .highlight .p {
     color: #999;
 }
 .highlight .nl {
+    color: #999;
+}
+.highlight .nb {
     color: #999;
 }
 
@@ -106,8 +108,4 @@ p {
 
 div.highlighter-rouge, figure.highlight {
   color: #eee;
-}
-
-.highlight .nb {
-    color: #eee;
 }
