edit syntax highlight

--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -93,6 +93,9 @@ a {
 .highlight .nb {
     color: #999;
 }
+.highlight .n {
+    color: #999;
+}
 
 p {
   margin: 0 0 30px;
@@ -107,5 +110,5 @@ p {
 }
 
 div.highlighter-rouge, figure.highlight {
-  color: #eee;
+  color: #999;
 }
